Update extension name

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Purdue Brightspace Campus",
+    "name": "Purdue Brightspace Campus Autoselect",
     "version": "1.0",
     "description": "Automatically clicks on your campus every time you load Purdue Brightspace",
     "permissions": [
