--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     "options_ui": {
         "page": "options.html"
     },
-    "browser_action": {
+    "action": {
         "default_icon": "icon.png",
         "default_popup": "options.html"
     },
